--- a/layouts/partials/fonts.html
+++ b/layouts/partials/fonts.html
@@ -1,2 +1,2 @@
-<link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
