--- a/layouts/partials/top.html
+++ b/layouts/partials/top.html
@@ -71,9 +71,9 @@
   <script src="//kit.fontawesome.com/{{.}}.js" crossorigin="anonymous"></script>
   {{- end }}
 
-  {{- partial "ga_header.html" . }}
 
 </head>
+{{- partial "ga_body.html" . }}
 <body>
   <div class="global">
 
