--- a/layouts/partials/bottom.html
+++ b/layouts/partials/bottom.html
@@ -1,12 +1,10 @@
 {{ if isset .Site.Params "address" }}
-{{ with .Site.Params.GoogleMapsAPIKey }}
+{{ with .Site.Params.services.GoogleMapsAPIKey.id }}
 <script async defer src="https://maps.googleapis.com/maps/api/js?key={{ . }}&libraries=places&callback=initialize"></script>
 {{ end }}
 {{ end }}
 
 {{ partial "fonts.html" . }}
-
-{{ template "_internal/google_analytics_async.html" . }}
 
 </body>
 </html>
